Fix color contrast ratio

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
     a {
-        @apply text-accent transition-colors font-semibold;
+        @apply text-emerald-700 transition-colors font-semibold;
     }
 
     a:hover {
@@ -12,7 +12,7 @@
     }
 
     h1 {
-        @apply text-4xl text-body leading-tight font-semibold before:text-accent before:font-semibold before:mr-2 before:content-['//'];
+        @apply text-4xl text-body leading-tight font-semibold before:text-emerald-700 before:font-semibold before:mr-2 before:content-['//'];
     }
 
     h2 {
@@ -98,7 +98,7 @@
     }
 
     blockquote {
-        @apply my-4 pl-4 border-l-2 border-accent italic;
+        @apply my-4 pl-4 border-l-2 border-emerald-700 italic;
     }
 
     .content pre {
